chore: fix dark mode story previews

--- a/.storybook/preview.scss
+++ b/.storybook/preview.scss
@@ -9,6 +9,10 @@
   .sbdocs-title * {
     vertical-align: middle !important;
   }
+
+  .dark .docs-story {
+    background: white;
+  }
 }
 
 /*! purgecss end ignore */
